# robotiq

./: .gitignore  .gitlab-ci.yml  README.md
robotiq/: CMakeLists.txt  package.xml
robotiq_2f_85_gripper_articulated_gazebo/: CMakeLists.txt  package.xml
robotiq_2f_85_gripper_articulated_gazebo/config/: robotiq_2f_85_controller.yaml
robotiq_2f_85_gripper_articulated_gazebo/launch/: robotiq_gripper_empty_world.launch
robotiq_2f_85_gripper_articulated_gazebo/launch/inc/: 2f_control.launch.xml
robotiq_2f_85_gripper_visualization/: CMakeLists.txt
robotiq_2f_85_gripper_visualization/launch/: robotiq_gripper_upload.launch
robotiq_2f_85_gripper_visualization/urdf/: robotiq_arg2f_85.gazebo.xacro  robotiq_arg2f_85_model.xacro  robotiq_arg2f_85_model_macro.xacro  robotiq_arg2f_transmission.xacro
robotiq_2f_description/: CMakeLists.txt  package.xml
robotiq_2f_description/config/2f-85/: joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
robotiq_2f_description/urdf/: robotiq_2f85.xacro  robotiq_2f_macro.xacro
robotiq_2f_description/urdf/inc/: finger_macro.xacro  palm_macro.xacro  robotiq_2f_macro.xacro  robotiq_common.xacro
robotiq_3f_description/: CMakeLists.txt  package.xml
robotiq_3f_description/config/: joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
robotiq_3f_description/urdf/: robotiq_3f.xacro  robotiq_3f_macro.xacro
robotiq_3f_description/urdf/inc/: finger_macro.xacro  palm_macro.xacro  robotiq_3f_macro.xacro  robotiq_common.xacro  transmission_macro.xacro
robotiq_3f_gripper_articulated_gazebo/: CMakeLists.txt
robotiq_3f_gripper_articulated_gazebo/config/: robotiq_3f_controller.yaml
robotiq_3f_gripper_articulated_gazebo/launch/: fixed_robotiq_gripper.launch  robotiq_gripper_empty_world.launch
robotiq_3f_gripper_articulated_gazebo/launch/inc/: 3f_control.launch.xml
robotiq_3f_gripper_articulated_gazebo/tests/: movement_test.py  movement_trajectory.py
robotiq_3f_gripper_articulated_gazebo/tests/worlds/: grippertest.world
robotiq_3f_gripper_visualization/: CMakeLists.txt
robotiq_3f_gripper_visualization/cfg/: fixed_robotiq-3f-gripper_articulated.xacro  robotiq-3f-gripper_articulated_macro.xacro  robotiq-3f-gripper_articulated_macro_transmissions.xacro  robotiq-3f-gripper_finger_articulated_macro.xacro  robotiq_hand_macro.urdf.xacro
robotiq_gazebo/: CMakeLists.txt  package.xml
robotiq_gazebo/config/: 2f85_controllers.yaml  3f_controllers.yaml
robotiq_gazebo/launch/: robotiq_2f85_bringup.launch  robotiq_3f_bringup.launch
robotiq_gazebo/launch/inc/: load_robotiq_2f85.launch.xml  load_robotiq_3f.launch.xml  robotiq_2f85_control.launch.xml  robotiq_3f_control.launch.xml
robotiq_gazebo/urdf/: robotiq_2f85.xacro  robotiq_3f.xacro
robotiq_gazebo/urdf/inc/: robotiq_2f85_macro.xacro  robotiq_3f_macro.xacro
