<?xml version="1.0"?>
<package format="2">
  <name>robotiq</name>
  <version>1.0.0</version>
  <description>ROS drivers for Robotiq Adaptive Grippers</description>
  <maintainer email="stephan.rediske@zal.aero">Stephan Rediske</maintainer>
  <license>TODO</license>
  <url type="website">https://www.zal.aero</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotiq_2f_85_gripper_visualization</exec_depend>
  <exec_depend>robotiq_2f_85_gripper_articulated_gazebo</exec_depend>
  <exec_depend>robotiq_3f_gripper_visualization</exec_depend>
  <exec_depend>robotiq_3f_gripper_articulated_gazebo</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
