<?xml version="1.0"?>
<package format="2">
  <name>robotiq_2f_description</name>
  <version>1.0.0</version>
  <description>
      URDF description for the Robotiq 2-Finger 2F-85 and 2F-140 Grippers.
  </description>

  <author>Stephan Rediske</author>
  <maintainer email="stephan.rediske@zal.aero">Stephan Rediske</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/srediske/robotiq/robotiq_2f_description</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
