<?xml version="1.0"?>
<package format="2">
  <name>robotiq_3f_description</name>
  <version>1.0.0</version>
  <description>
      URDF description for the Robotiq 3-Finger Adaptive Robot Gripper.
  </description>

  <author>Stephan Rediske</author>
  <maintainer email="stephan.rediske@zal.aero">Stephan Rediske</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/robotiq</url>
  <url type="official_repository">https://github.com/ros-industrial/robotiq</url>
  <url type="internal_repository">https://gitlab.zal.aero/stephan.rediske/robotiq</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
