<?xml version="1.0"?>
<package format="2">
  <name>robotiq_gazebo</name>
  <version>1.0.0</version>
  <description>
      Gazebo wrapper for the Robotiq 3-Finger Adaptive Robot Gripper.
  </description>

  <author>Stephan Rediske</author>
  <maintainer email="stephan.rediske@zal.aero">Stephan Rediske</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/robotiq</url>
  <url type="official_repository">https://github.com/ros-industrial/robotiq</url>
  <url type="internal_repository">https://gitlab.zal.aero/stephan.rediske/robotiq</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robotiq_3f_description</exec_depend>

</package>
